--- a/first/main/templates/main/error.html
+++ b/first/main/templates/main/error.html
@@ -73,7 +73,7 @@
 </head>
 
 <body>
-      <img src=”img/john-salvino-bqGBbLq_yfc-unsplash.jpg”>
+      <img src=””>
       <a href="{% url 'login' %}" class="login-button">Для того чтобы начать играть, нужно сначало войти в аккаунт!</a>
     </form>
   </div>
