--- a/first/main/templates/main/reg.html
+++ b/first/main/templates/main/reg.html
@@ -109,8 +109,9 @@
       <button class="login-button">Зарегистрироваться</button>
     </form>
   </div>
+
   <a href="{% url 'home' %}" class="back-button">На главную</a>
-  <button class="support-button">Поддержка</button>
+  <a href="{% url 'support' %}" class="support-button">Поддержка</a>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
